--- a/CV.Rmd
+++ b/CV.Rmd
@@ -1,10 +1,18 @@
 ---
-title: "Caitlin M Davis  <br> *Curriculum vitae*"
+title: "*Curriculum vitae* <br> **Caitlin M Davis**"
 output: html_document
+---
+
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+```
+
+```{css, echo=FALSE}
+h1, h2, h3 {
+  text-align: center;
+}
 ```
 
 ### Education
@@ -44,6 +52,6 @@ Robinson, B. W. and **C. M. Davis**. 2014. A Communal Roosting of the Great Horn
 **2016- 2019** Laboratory instructor: Human Anatomy and Physiology I & II 
 
 
-
+<center>![](/users/caitlindavis/downloads/IMG_4952.HEIC)</center>
 
 
