--- a/CV.Rmd
+++ b/CV.Rmd
@@ -1,8 +1,6 @@
 ---
 title: "*Curriculum vitae* <br> **Caitlin M Davis**"
-output: html_document
----
-
+output: github_document
 ---
 
 ```{r setup, include=FALSE}
@@ -20,6 +18,7 @@ h1, h2, h3 {
 BA Biology, Goucher College  <br> 
 MS Raptor Biology, Boise State University
 
+
 ### Publications
 
 **Davis, C. M.**, J.A. Heath. 2022. Treatment of nest parasites as a mitigation option for eagle take permits. *Manuscript in prep*. 
@@ -31,7 +30,7 @@ MS Raptor Biology, Boise State University
 **Davis, C. M.**, J. A. Heath, and C. J. W. McClure. 2017. Nest box use by American Kestrels and other cavity-nesting birds during the nonbreeding season. Avian Conservation and Ecology. 12(2):5 
 <br>
 Robinson, B. W. and **C. M. Davis**. 2014. A Communal Roosting of the Great Horned Owl- Bubo virginianus. Journal of Raptor Research 48(1): 88-89 
-<br>
+
 
 ### Employment
 **2019**- Present; Research Associate, Golden Eagle Project Manager, Boise State University, ID <br> 
@@ -47,11 +46,16 @@ Robinson, B. W. and **C. M. Davis**. 2014. A Communal Roosting of the Great Horn
 **2011**; Sage-grouse Research Technician, Colorado Division of Wildlife, Gunnison, CO <br> 
 **2010**; Antbird Lab Technician, Smithsonian Tropical Research Institute, Gamboa, Panama <br> 
 
+
 ### Teaching
 **2022** Raptor Research Foundation Annual Conference workshop instructor: Advanced Molt & Aging in Raptors <br>
 **2016- 2019** Laboratory instructor: Human Anatomy and Physiology I & II 
 
+---
 
-<center>![](/users/caitlindavis/downloads/IMG_4952.HEIC)</center>
+<br>
+
+![](https://d25vtythmttl3o.cloudfront.net/uploads/sites/255/2019/04/BoiseState_16_17_171Caitlin-Davis.jpg)
+
 
 
